# x509-limbo

./: .envrc  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  limbo-schema.json  limbo.json  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/actions/run-harnesses/: action.yml
.github/workflows/: ci.yml  label-checks.yml  lint.yml  refresh-bettertls-testcases.yml  refresh-online-testcases.yml  regression-comment.yml  regression.yml  site.yml  test-harness.yml
harness/: README.md  render-summary.py
harness-support/rust/: Cargo.toml  README.md
harness-support/rust/src/: lib.rs  models.rs
harness/boringssl/: Makefile  boringssl.dockerfile  main.cpp
harness/certvalidator/: main.py
harness/gnutls/: README.md  test-gnutls
harness/gocryptox509/: .gitignore  Makefile  go.mod  go.sum  main.go  schema.go
harness/macos-security/: README.md  test-macos-security
harness/openssl/: .gitignore  Makefile  README.md  aws-lc.dockerfile  boringssl.dockerfile  libressl-3.9.dockerfile  libressl-4.0.dockerfile  libressl-4.1.dockerfile  libressl-4.2.dockerfile  libressl-4.3.dockerfile  main  main.cpp  openssl-1.1.1.dockerfile  openssl-3.0.dockerfile  openssl-3.1.dockerfile  openssl-3.2.dockerfile  openssl-3.3.dockerfile  openssl-3.4.dockerfile  openssl-3.5.dockerfile  openssl-3.6.dockerfile  openssl-4.0.dockerfile
harness/pyca-cryptography/: main.py
harness/rust-rustls/: Cargo.toml  README.md  results.json
harness/rust-rustls/src/: main.rs
harness/rust-webpki/: Cargo.toml  README.md
harness/rust-webpki/src/: main.rs  models.rs
harness/wtx/: Cargo.toml
harness/wtx/src/: main.rs
limbo/: __main__.py  _cli.py  _github.py  _markdown.py  assets.py  models.py  testcases.py
limbo/_assets/: __init__.py  bad_version.crl  crl_cases_ca.pem  crl_cases_ca_key.pem  crl_cases_leaf.pem  crl_cases_leaf_key.pem  crl_template.txt  cryptography.io.pem  cryptography.io_mismatched.pem  explicit_curve.key  explicit_curve_ca.csr  explicit_curve_ca.key  explicit_curve_ca.pem  explicit_curve_leaf.csr  explicit_curve_leaf.key  explicit_curve_leaf.pem  generalized_time_2025.crl
limbo/_assets/crl/: Makefile  bad_version.crl  bad_version.txt  generalized_time_2025.crl  generalized_time_2025.txt  missing_next_update.crl  missing_next_update.txt
limbo/_assets/online/: akamai.com.limbo.json  amazon.com.limbo.json  apple.com.limbo.json  aws.amazon.com.limbo.json  bing.com.limbo.json  cloudflare.com.limbo.json  docs.python.org.limbo.json  facebook.com.limbo.json  fastly.com.limbo.json  google.com.limbo.json  microsoft.com.limbo.json  s3.amazonaws.com.limbo.json  stackoverflow.com.limbo.json  storage.googleapis.com.limbo.json
limbo/_assets/scripts/: generate_crl.py  generate_explicit_curve_cert.sh  generate_explicit_curve_key.sh  generate_mismatch_cert.sh
limbo/_assets/templates/: new-testcases.md  regressions.md  sampled-regressions.md  testcase.md
limbo/testcases/: __init__.py  _core.py  basic.py  bettertls.py  crl.py  cve.py  ee_pathlen.py  invalid.py  online.py  pathlen.py  pathological.py  rfc5280.py  webpki.py
limbo/testcases/crl/: __init__.py  cabf.py  external.py  idp.py  structure.py  temporal.py
limbo/testcases/rfc5280/: __init__.py  aki.py  eku.py  nc.py  pc.py  san.py  serial.py  ski.py  validity.py
limbo/testcases/smime/: __init__.py  eku.py  ku.py  san.py
limbo/testcases/webpki/: __init__.py  aki.py  cn.py  eku.py  ku.py  nc.py  online.py  san.py  topsites.py
schema/: models.py
site/: index.md  render-testcases.py  style.css  trophy-case.md
testcases/: ee-certs-pathlen-constraints.limbo.yml  ee-certs-pathlen-constraints.yml  limbo.json
testcases/assets/: ee-from-intermediate-pathlen-0.pem  ee-from-intermediate-pathlen-1.pem  ee-from-intermediate-pathlen-2.pem  intermediate-ca-pathlen-0.pem  intermediate-ca-pathlen-1.pem  intermediate-ca-pathlen-2.pem  intermediate.key  root.key  v3-root.pem
