[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "limbo"
dynamic = ["version"]
description = "x509-limbo's command line"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "The Python Cryptographic Authority and individual contributors", email = "cryptography-dev@python.org" },
]
dependencies = [
    "pydantic ~= 2.4",
    # For the `certvalidator` test harness.
    "certvalidator ~= 0.11",
    "cryptography ~= 42.0",
    "pyyaml ~= 6.0",
    "pyOpenSSL",
    "certifi",
    "requests ~= 2.31",
    "Jinja2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
lint = [
    # NOTE: ruff is under active development, so we pin conservatively here
    # and let Dependabot periodically perform this update.
    "ruff < 0.4.4",
    "mypy >= 1.0",
    "types-pyyaml",
    "types-pyOpenSSL",
    "types-requests",
]
doc = []
test = []
site = [
    "mkdocs",
    "mkdocs-gen-files",
    "pymdown-extensions",
    "mkdocs-material",
    "py-markdown-table==0.4.0",
]
dev = ["limbo[doc,test,lint,site]", "twine", "wheel", "build"]
[project.scripts]
"limbo" = "limbo._cli:main"

[project.urls]
homepage = "https://github.com/C2SP/x509-limbo"
source = "https://github.com/C2SP/x509-limbo/"
issues = "https://github.com/C2SP/x509-limbo/issues"

[tool.mypy]
plugins = ["pydantic.mypy"]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "I", "N", "YTT", "BLE", "C4", "SIM"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]
