[package]
name = "limbo-harness-support"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
regress = "0.9.1"
# TODO: Replace with upstream once merged:
# https://github.com/Marwes/schemafy/pull/76
# schemafy = { git = "https://github.com/woodruffw-forks/schemafy", rev = "de28e87" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
typify = "0.0.16"
