[package]
name = "limbo-harness-support"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
regress = "0.10.3"
# TODO: Replace with upstream once merged:
# https://github.com/Marwes/schemafy/pull/76
# schemafy = { git = "https://github.com/woodruffw-forks/schemafy", rev = "de28e87" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
typify = "0.3.0"
