[package]
name = "limbo-harness-support"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
regress = "0.10.5"
# TODO: Replace with upstream once merged:
# https://github.com/Marwes/schemafy/pull/76
# schemafy = { git = "https://github.com/woodruffw-forks/schemafy", rev = "de28e87" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
typify = "0.5.0"
