[package]
name = "rust-webpki-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
pem = "3.0.2"
schemafy = { git = "https://github.com/woodruffw-forks/schemafy", branch = "ww/allow-optimize" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
webpki = { version = "0.22.4", features = ["std"] }
