[package]
name = "rust-wtx-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
limbo-harness-support = { path = "../../harness-support/rust" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
serde_json = { default-features = false, features = ["std"], version = "1.0" }
wtx = { default-features = false, features = ["serde", "x509"], version = "0.44" }
